# Build-a-chatbot-with-RAG-and-deploy-using-AWS-codepipeline

./: Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  routes.py  streamlit_UI.py
.src/sentence_index/: index_store.json
deployment/: buildspec.yml
src/: data_preparation.py  response_generator.py
